# django-adv-cache-tag

./: .documentup.yml  .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  documentup.json  runtests.sh  setup.cfg  setup.py
adv_cache_tag/: __init__.py  compat.py  tag.py
adv_cache_tag/templatetags/: adv_cache.py
adv_cache_tag/tests/: __init__.py  compat.py  tests.py
adv_cache_tag/tests/testproject/: settings.py
adv_cache_tag/tests/testproject/adv_cache_test_app/templatetags/: adv_cache_test.py  other_filters.py  other_tags.py
