[metadata]
name = django-adv-cache-tag
version = 0.4
author = Stephane "Twidi" Angel
author_email = s.angel@twidi.com
url = https://github.com/twidi/django-adv-cache-tag
description = An advanced template tag for caching in django: versioning, compress, partial caching, easy inheritance
long_description = file: README.rst
license = MIT
license_file = LICENSE
keywords = django, cache, templatetag, template
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Framework :: Django
    Framework :: Django :: 1.4
    Framework :: Django :: 1.5
    Framework :: Django :: 1.6
    Framework :: Django :: 1.7
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11

[options]
zip_safe = True
packages = find:
python_requires = >=2.7, <3

[options.packages.find]
include =
    adv_cache_tag
    adv_cache_tag.*

[options.extras_require]
dev =
    django
    future
